# ChangeLog for app-text/docbook-xsl-ns-stylesheets
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-text/docbook-xsl-ns-stylesheets/ChangeLog,v 1.27 2011/12/04 17:09:54 hwoarang Exp $

  04 Dec 2011; Markos Chandras <hwoarang@gentoo.org>
  docbook-xsl-ns-stylesheets-1.76.1.ebuild:
  Stable on amd64 wrt bug #388277

  26 Nov 2011; Raúl Porcel <armin76@gentoo.org>
  docbook-xsl-ns-stylesheets-1.76.1.ebuild:
  alpha/ia64/m68k/s390/sh/sparc stable wrt #388277

  05 Nov 2011; Markus Meier <maekke@gentoo.org>
  docbook-xsl-ns-stylesheets-1.76.1.ebuild:
  arm stable, bug #388277

  28 Oct 2011; Jeroen Roovers <jer@gentoo.org>
  docbook-xsl-ns-stylesheets-1.76.1.ebuild:
  Stable for HPPA (bug #388277).

  25 Oct 2011; Pawel Hajdan jr <phajdan.jr@gentoo.org>
  docbook-xsl-ns-stylesheets-1.76.1.ebuild:
  x86 stable wrt bug #388277

*docbook-xsl-ns-stylesheets-1.76.1 (19 Feb 2011)

  19 Feb 2011; Diego E. Pettenò <flameeyes@gentoo.org>
  docbook-xsl-ns-stylesheets-1.75.2.ebuild,
  -docbook-xsl-ns-stylesheets-1.76.0.ebuild,
  +docbook-xsl-ns-stylesheets-1.76.1.ebuild:
  Version bump (to fix a few issues with 1.76.0); fix repoman false positive.

*docbook-xsl-ns-stylesheets-1.76.0 (04 Sep 2010)

  04 Sep 2010; Diego E. Pettenò <flameeyes@gentoo.org>
  +docbook-xsl-ns-stylesheets-1.76.0.ebuild:
  Version bump.

  21 Aug 2010; Diego E. Pettenò <flameeyes@gentoo.org>
  -docbook-xsl-ns-stylesheets-1.74.0.ebuild,
  -files/docbook-xsl-ns-1.74.0-maketoc-fix.patch:
  Drop old version and unused file.

  06 Jan 2010; Brent Baude <ranger@gentoo.org>
  docbook-xsl-ns-stylesheets-1.75.2.ebuild:
  Marking docbook-xsl-ns-stylesheets-1.75.2 ppc64 for bug 282302

  19 Sep 2009; Diego E. Pettenò <flameeyes@gentoo.org>
  docbook-xsl-ns-stylesheets-1.75.2.ebuild:
  Regenerate digest, upstream changed the distfile; get rid of the test USE
  flag and dependencies since the tests won't work any time soon.
